[package]
name = "tcp-over-redis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[[bin]]
name = "client"
path = "src/bin/client/main.rs"

[dependencies]
redis = { version = "0.25.3", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1.40"
rand = "0.8.5"
thiserror = "1.0.61"
tokio-util = { version = "0.7.11", features = ["rt"] }
tokio-stream = "0.1.15"
deadpool-redis = "0.15.1"
const_format = "0.2.32"
async-stream = "0.3.5"
tracing-subscriber = "0.3.18"

[dev-dependencies]
anyhow = "1.0.86"